// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorMessage matches the snapshot 1`] = `
<wrappers__PageWrapper>
  <h3>
    Ooops...
  </h3>
  <p>
    Something went sideways :$
  </p>
  <error-message__ErrorBox>
    <error-message__ErrorCode>
      Hello world!
    </error-message__ErrorCode>
  </error-message__ErrorBox>
</wrappers__PageWrapper>
`;

exports[`TestedComponent is  ErrorBox matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "error-message__ErrorBox-sc-1rf8xv3-0",
        "isStatic": true,
        "rules": Array [
          "background-color:",
          "rgba(231, 110, 85, 0.5)",
          ";box-shadow:4px 0 ",
          "#e76e55",
          ",0 -4px ",
          "#e76e55",
          ",-4px 0 ",
          "#e76e55",
          ",0 4px ",
          "#e76e55",
          ";display:block;margin:0.5em 0;overflow-x:auto;padding:0.5em;white-space:pre-wrap;",
        ],
      },
      "displayName": "error-message__ErrorBox",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "error-message__ErrorBox-sc-1rf8xv3-0",
      "target": "pre",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`TestedComponent is  ErrorCode matches snapshot 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "error-message__ErrorCode-sc-1rf8xv3-1",
        "isStatic": true,
        "rules": Array [
          "color:",
          "#ce372b",
          ";font-family:",
          "'Press Start 2P', monospace",
          ";font-size:0.65em;font-weight:bold;",
        ],
      },
      "displayName": "error-message__ErrorCode",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "error-message__ErrorCode-sc-1rf8xv3-1",
      "target": "code",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;
